# moviePlayer

./: .env.example  .gitignore  README.md  requirements.txt
api/: main.py
db/: config.py  db_access.py  init_db.py
player/: Cargo.toml  movies
player/src/: main.rs
scraper/: add_movies.py  main.py
