[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
rand = "0.8"
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true